log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Fri May 15 06:52:55 PM UTC 2026: 
 graph.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:5: error: unknown type name ‘edge’; did you mean ‘Edge’?
   58 |     edge peso=first_list(auxi->value);
      |     ^~~~
      |     Edge
graph.c:58:15: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     edge peso=first_list(auxi->value);
      |               ^~~~~~~~~~
graph.c:60:15: error: comparison between pointer and integer [-Werror]
   60 |     while(peso!=NULL){
      |               ^~
graph.c:62:31: error: invalid type argument of ‘->’ (have ‘int’)
   62 |         if (strcmp((void*)peso->target, (void*)label2)==0){
      |                               ^~
graph.c:63:24: error: invalid type argument of ‘->’ (have ‘int’)
   63 |             return peso->weight;
      |                        ^~
graph.c:65:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   65 |         peso=list_next(auxi->value);
      |             ^
cc1: all warnings being treated as errors
a771188
Fri May 15 06:53:12 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:15: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     Edge peso=first_list(auxi->value);
      |               ^~~~~~~~~~
graph.c:58:15: error: invalid initializer
graph.c:60:15: error: invalid operands to binary != (have ‘Edge’ and ‘void *’)
   60 |     while(peso!=NULL){
      |               ^~
graph.c:62:31: error: invalid type argument of ‘->’ (have ‘Edge’)
   62 |         if (strcmp((void*)peso->target, (void*)label2)==0){
      |                               ^~
graph.c:63:24: error: invalid type argument of ‘->’ (have ‘Edge’)
   63 |             return peso->weight;
      |                        ^~
graph.c:65:14: error: incompatible types when assigning to type ‘Edge’ from type ‘void *’
   65 |         peso=list_next(auxi->value);
      |              ^~~~~~~~~
5ba0d74
Fri May 15 06:53:41 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘getWeight’:
graph.c:58:16: error: implicit declaration of function ‘first_list’ [-Wimplicit-function-declaration]
   58 |     Edge *peso=first_list(auxi->value);
      |                ^~~~~~~~~~
graph.c:58:16: error: initialization of ‘Edge *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
1ace691
Fri May 15 06:54:26 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
ba6df6a
Fri May 15 06:55:24 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
========================================
1e825b8
Fri May 15 06:58:06 PM UTC 2026: 
 tests:  1|5
========================================
8e43401
Fri May 15 07:07:46 PM UTC 2026: 
 tests:  1|5
========================================
931abd3
Sun May 17 12:27:41 AM UTC 2026: 
 graph.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:25: error: implicit declaration of function ‘create_map’; did you mean ‘createGraph’? [-Wimplicit-function-declaration]
   33 |     grafo->adjacencyMap=create_map(is_equal_string);
      |                         ^~~~~~~~~~
      |                         createGraph
graph.c:33:24: error: assignment to ‘Map *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   33 |     grafo->adjacencyMap=create_map(is_equal_string);
      |                        ^
23b64d8
Sun May 17 12:29:53 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6820624
Sun May 17 12:31:21 AM UTC 2026: 
 tests:  0|0
5e3efab
Sun May 17 12:32:47 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7c51abd
Sun May 17 12:33:15 AM UTC 2026: 
 graph.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:37:5: error: expected ‘;’ before ‘}’ token
   37 |     }
      |     ^
600f336
Sun May 17 12:33:26 AM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a7f886d
Sun May 17 12:34:06 AM UTC 2026: 
 graph.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:31:27: error: too few arguments to function ‘calloc’
   31 |     Graph * grafo=(Graph*)calloc(sizeof(Graph));
      |                           ^~~~~~
In file included from test.c:2:
/nix/store/41pf3md9zgpda9kwh6rzn5kaddf7i0lp-glibc-2.40-66-dev/include/stdlib.h:675:14: note: declared here
  675 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
e35be81
Sun May 17 12:37:54 AM UTC 2026: 
 graph.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
498c528
Sun May 17 12:40:32 AM UTC 2026: 
 graph.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
========================================
597b20d
Sun May 17 12:41:26 AM UTC 2026: 
 graph.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
2b57d0e
Sun May 17 01:32:12 AM UTC 2026: 
 graph.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘addNode’:
graph.c:46:16: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   46 |         return NULL;
      |                ^~~~
graph.c:39:6: note: declared here
   39 | void addNode(Graph* g, const char* label) {
      |      ^~~~~~~
graph.c:51:5: error: implicit declaration of function ‘map_inseert’; did you mean ‘map_insert’? [-Wimplicit-function-declaration]
   51 |     map_inseert(g->adjacencyMap, label, lista_auxi);
      |     ^~~~~~~~~~~
      |     map_insert
00b60cd
